syntax = "proto3";

package com.epitech.atmos.protobuf;

option java_multiple_files = true;

message Header {
    uint32 device_id = 1;
    uint32 packet_crc = 2;
}

message Socket {
    uint32 socket_id = 1;
    uint32 sensor_id = 2;
    uint32 sensor_type = 3;
}

message Socket_layout_packet {
    Header header = 1;
    repeated Socket socket_data = 2;
}

message Data_packet {
    Header header = 1;
    repeated uint32 sensor_data = 2;
}